--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
 
                         <div class=" nppostmobile ">
                             <div class=" livetextmobile ">
-                                <span class="valueStatemobilehome">Fields of May</span>
+                                <!-- class="valueStatemobilehome" -->
+                                <span class="goodVision">Fields of May</span>
                             </div>
                         </div>
 
@@ -88,9 +89,19 @@
                         <!-- {/*---------------------------- Sub text ----------- */} -->
                         <div class=" subTextmobile ">
 
-                            <p class=" subTextOpacitymobile ">The concentration of Baltic Sea Algae as of
+
+
+                            <!-- <p class=" subTextOpacitymobile ">The concentration of Baltic Sea Algae as of
                                 {dateState}
                                 is {valueStatee}. For several decades the Archipelago Research
+                                Institute has been measuring the shrinking Herring and traced the cause to the morphing
+                                plankton due to changes in salinity and eutrophication. In short, Algae concentration is
+                                an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
+                                font.
+                            </p> -->
+                            <p class=" subTextOpacitymobile ">The concentration of Baltic Sea Algae as of
+                                22.09.2022
+                                is 2.5µg/l. For several decades the Archipelago Research
                                 Institute has been measuring the shrinking Herring and traced the cause to the morphing
                                 plankton due to changes in salinity and eutrophication. In short, Algae concentration is
                                 an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
@@ -185,12 +196,25 @@
 
                         </a>
 
+                        <!-- Links to pages -->
+<!-- 
                         <a href="./witness-seminar-in-seili.html" class="linkTop1">Witness Seminar in Seili
                         </a>
 
 
                         <a class="linkTop2" } href="./a-witness-seminar-how-to.html">A Witness Seminar How-To</a>
-                        <a class="linkTop3" } href="./about.html">About</a>
+                        <a class="linkTop3" } href="./about.html">About</a> -->
+
+
+
+                        <!-- Coming soon link -->
+
+                        <a href="./comingsoon.html" class="linkTop1">Witness Seminar in Seili
+                        </a>
+
+
+                        <a class="linkTop2" } href="./comingsoon.html">A Witness Seminar How-To</a>
+                        <a class="linkTop3" } href="./comingsoon.html">About</a>
                     </div>
 
 
@@ -256,7 +280,8 @@
                         <div class="livetextContainer">
                             <div class="nppost">
                                 <div class="livetext">
-                                    <span class="valueState">Fields of May</span>
+                                    <!-- class="valueState" -->
+                                    <span class="goodVision">Fields of May</span>
                                 </div>
                             </div>
                         </div>
@@ -269,14 +294,21 @@
 
 
 
-                        <p class="subTextOpacity">The concentration of Baltic Sea Algae as of {dateState} is
+                        <!-- <p class="subTextOpacity">The concentration of Baltic Sea Algae as of {dateState} is
                             {valueStatee}. For several decades the Archipelago Research Institute has been measuring the
                             shrinking Herring and traced the cause to the
                             morphing plankton due to changes in salinity and eutrophication. In short, Algae
                             concentration is an indicator of the Baltic Sea&apos;s health here reflected in the
                             legibility of the font.
+                        </p> -->
+                        <p class=" subTextOpacity ">The concentration of Baltic Sea Algae as of
+                            22.09.2022
+                            is 2.5µg/l. For several decades the Archipelago Research
+                            Institute has been measuring the shrinking Herring and traced the cause to the morphing
+                            plankton due to changes in salinity and eutrophication. In short, Algae concentration is
+                            an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
+                            font.
                         </p>
-
 
                         <div class="algaeListContainer">
 
