--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Fields of May" />
     <!-- <link rel="icon" href={faviconState}/>
     <link rel="apple-touch-icon" href={faviconState}/> -->
+    <link rel="apple-touch-icon" href="Fair.ico"/>
+    <link rel="icon" href="Fair.ico" type="image/x-icon" />
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
@@ -16,7 +18,7 @@
     </link>
 
 
-    <link rel="stylesheet" href="../css/about.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <!-- JavaScript Bundle with Popper -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -405,61 +407,61 @@
                                 <div class="contentSubTitle">
                                     <!-- {/* <div class="contentTitle"> */} -->
                                     <div>
-                                        <a href="#On-Rhythm">On Rhythm</a>
+                                        <a href="#onrhythm">On Rhythm</a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Material-specificity"> Material Specificity </a>
+                                        <a href="#material-specificity"> Material Specificity </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Popular-Court-History"> Popular Court History </a>
+                                        <a href="#popular-Court-History"> Popular Court History </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Blue-economy-tribunal"> Blue economy tribunal </a>
+                                        <a href="#blue-economy-tribunal"> Blue economy tribunal </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Future-tradition"> Future tradition </a>
+                                        <a href="#future-tradition"> Future tradition </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Legal-ecologies"> Legal ecologies </a>
+                                        <a href="#legal-ecologies"> Legal ecologies </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Commoning"> Commoning </a>
+                                        <a href="#commoning"> Commoning </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Commoning-Knowledge"> Commoning knowledge </a>
+                                        <a href="#commoning-Knowledge"> Commoning knowledge </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#A-convergence-of-practice"> A convergence of practices </a>
+                                        <a href="#a-convergence-of-practice"> A convergence of practices </a>
                                     </div>
                                 </div>
                                 <div class="contentSubTitle">
                                     <div>
                                         <!-- {/* <a href="./witness-Seminar">[ Next ]</a> */} -->
-                                        <a href="#Windsock"> Windsock </a>
+                                        <a href="#windsock"> Windsock </a>
                                     </div>
                                 </div>
 
@@ -499,7 +501,7 @@
                             </div>
 
 
-                            <div id="On-Rhythm">
+                            <div id="onrhythm">
                                 <div class="paragraph">
                                     <span class="subheader">On Rhythm</span>
                                     Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution to
@@ -519,7 +521,7 @@
                                 </div>
                             </div>
 
-                            <div id="Material-specificity">
+                            <div id="material-specificity">
                                 <div class="paragraph">
                                     <span class="subheader">Material specificity</span>
                                     This installation consists of salvaged discarded masts, spars and other maritime
@@ -535,7 +537,7 @@
                                 </div>
                             </div>
 
-                            <div id="Popular-Court-History">
+                            <div id="popular-Court-History">
                                 <div class="paragraph">
                                     <span class="subheader">Popular court history</span>
                                     The Sigyn’s masts were previously erected in an installation named Midsummer Mast in
@@ -556,7 +558,7 @@
                                 </div>
                             </div>
 
-                            <div id="Blue-economy-tribunal">
+                            <div id="blue-economy-tribunal">
                                 <div class="paragraph">
                                     <span class="subheader">Blue Economy tribunal</span>
                                     The 2022 EU Directive on Maritime Spatial Planning is the most recent blueprint
@@ -582,7 +584,7 @@
 
                         <div class="colum2">
 
-                            <div id="Future-tradition">
+                            <div id="future-tradition">
                                 <div class="paragraph">
                                     <span class="subheader">Future tradition</span>
                                     <i><b>“The question then becomes: what languages and visions will be appropriate to
@@ -609,7 +611,7 @@
                             </div>
 
 
-                            <div id="Legal-ecologies">
+                            <div id="legal-ecologies">
                                 <div class="paragraph">
                                     <span class="subheader">Legal Ecologies</span>
                                     <b>The legal system is fundamentally anthropocentric
@@ -645,7 +647,7 @@
                             </div>
 
 
-                            <div id="Commoning">
+                            <div id="commoning">
                                 <div class="paragraphbold">
                                     <span class="subheader">Commoning</span>
                                     Ilppo Vuorinen, former director of the Archipelago Research Institute, explicates
@@ -658,7 +660,7 @@
                                 </div>
                             </div>
 
-                            <div id="Commoning-Knowledge">
+                            <div id="commoning-Knowledge">
                                 <div class="paragraphbold">
                                     <span class="subheader">Commoning Knowledge</span>
                                     Another aspect of this project is a collaboration of building knowledges. The
@@ -675,7 +677,7 @@
                             </div>
 
 
-                            <div id="A-convergence-of-practice">
+                            <div id="a-convergence-of-practice">
                                 <div class="paragraph">
                                     <span class="subheader">A convergence of practices</span>
                                     <b>“From ancient times through the present, it has been the weavers and
@@ -688,7 +690,7 @@
                             </div>
 
 
-                            <div id="Windsock">
+                            <div id="windsock">
                                 <div class="paragraphbold">
                                     <span class="subheader">Windsock</span>
                                     Last but not least, in honour of one of the Archipelago Research Institute’s
