--- a/public/a-witness-seminar-how-to.html
+++ b/public/a-witness-seminar-how-to.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fields of May" />
-    <link rel="icon" href="favicon.ico"/>
-    <link rel="apple-touch-icon" href="favicon.ico"/>
+    <link rel="apple-touch-icon" href="Fair.ico"/>
+    <link rel="icon" href="Fair.ico" type="image/x-icon" />
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
@@ -16,7 +16,7 @@
     </link>
 
 
-    <link rel="stylesheet" href="../css/ws-in-howto.css" />
+    <link rel="stylesheet" href="css/ws-in-howto.css" />
     <!-- JavaScript Bundle with Popper -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
