--- a/public/soon.html
+++ b/public/soon.html
@@ -16,14 +16,14 @@
     </link>
 
 
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/soon.css" />
     <!-- JavaScript Bundle with Popper -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script> -->
-    <title>Fields of May</title>
+    <title>Coming Soon</title>
 </head>
 
 
@@ -34,7 +34,7 @@
     <div class=" container ">
 
 
-        <main class=" mainsoon ">
+        <main class=" main ">
 
 
 
@@ -70,14 +70,14 @@
                 </div> -->
 
 
-                <!-- <div class=" livetextcomingsoon ">
+                <div class=" livetextcomingsoon ">
                     Coming Soon
                 </div>
-               -->
+              
  
-                    <div class=" containersoon ">
+                    <!-- <div class=" soonmobile ">
                         Comming Soon
-                    </div>
+                    </div> -->
 
 
 
