--- a/public/comingsoon.html
+++ b/public/comingsoon.html
@@ -31,10 +31,10 @@
 
 
     <div>
-    <div class=" container ">
+    <div class=" containersoon ">
 
 
-        <main class=" mainsoon ">
+        <main class=" main ">
 
 
 
@@ -75,9 +75,9 @@
                 </div>
                -->
  
-                    <div class=" containersoon ">
+                    <!-- <div class=" containersoon ">
                         Comming Soon
-                    </div>
+                    </div> -->
 
 
 
