--- a/public/index.html
+++ b/public/index.html
@@ -78,18 +78,18 @@
                     <div class=" livetextContainermobile ">
 
 
-                        <div class=" nppostmobile ">
-                            <div class=" livetextmobile ">
-                                <!-- class="valueStatemobilehome" -->
-                                <span class="goodVision">Fields of May</span>
-                            </div>
-                        </div>
+                      
 
 
                         <!-- {/*---------------------------- Sub text ----------- */} -->
                         <div class=" subTextmobile ">
 
-
+                            <div class=" nppostmobile ">
+                                <div class=" livetextmobile ">
+                                    <!-- class="valueStatemobilehome" -->
+                                    <span class="goodVision">Fields of May</span>
+                                </div>
+                            </div>
 
                             <!-- <p class=" subTextOpacitymobile ">The concentration of Baltic Sea Algae as of
                                 {dateState}
@@ -207,13 +207,11 @@
 
 
 
-                        <!-- Coming soon link -->
-                        <a href="./comingsoon.html" class="linkTop1">Witness Seminar in Seili
+                        <!-- Coming soon part -->
+                        <a href="./witness-seminar-in-seili.html" class="linkTop1">Witness Seminar in Seili
                         </a>
-
-
                         <a class="linkTop2" } href="./comingsoon.html">A Witness Seminar How-To</a>
-                        <a class="linkTop3" } href="./comingsoon.html">About</a>
+                        <a class="linkTop3" } href="./about.html">About</a>
                     </div>
 
 
@@ -231,7 +229,10 @@
                                 </div>
                             </div>
 
-                            <div class="nppostname">Average Baltic herring size in 2000: 16cm</div>
+                            <div class="nppostname">
+                                 <b>16cm</b><br><br>
+                                Average Baltic herring size in 2000
+                            </div>
                             <!-- {/* <div class="" nppostnamee >This is placeholder text 2</div>  -->
 
                         </div>
@@ -242,13 +243,16 @@
                             <div class="nppostt">
 
                                 <div class="fish2">
-                                    <Image src="/assets/images/Fish.png" alt="Herring Fish 19XX" width="150px"
-                                        height="35px" />
+                                    <Image src="/assets/images/Fish.png" alt="Herring Fish 19XX" width="110px"
+                                        height="30px" />
                                 </div>
                             </div>
 
                             <!-- {/* <div class="" nppostname >Average Baltic herring size in 2000: 16cm</div>  */} -->
-                            <div class="nppostnamee">Average Baltic herring size in 1990: 19cm</div>
+                            <div class="nppostnamee">
+                               <b>19cm </b>  <br><br>
+                                Average Baltic herring size in 1990
+                            </div>
                             <!-- {/* <div class="" nppostname >This is placeholder text 3</div>  */} -->
                         </div>
                     </div>
@@ -258,14 +262,18 @@
                             <div class="npposttt">
 
                                 <div class="fish3">
-                                    <Image src="/assets/images/Fish.png" alt="Herring Fish 19XX" width="200px"
-                                        height="45px" />
+                                    <Image src="/assets/images/Fish.png" alt="Herring Fish 19XX" width="140px"
+                                        height="35px" />
                                 </div>
                             </div>
 
                             <!-- {/* <div class="" nppostname >Average Baltic herring size in 2000: 16cm</div>  */} -->
                             <!-- {/* <div class="" nppostnamee >This is placeholder text 2</div>  */} -->
-                            <div class="nppostnameee">Average Baltic herring size in 1985: 21cm</div>
+                            <div class="nppostnameee">
+                                 <b>21cm </b><br><br>
+                             
+                                Average Baltic herring size in 1985 
+                            </div>
                         </div>
                     </div>
 
@@ -291,15 +299,6 @@
                     <div class="subText">
 
 
-
-
-                        <!-- <p class="subTextOpacity">The concentration of Baltic Sea Algae as of {dateState} is
-                            {valueStatee}. For several decades the Archipelago Research Institute has been measuring the
-                            shrinking Herring and traced the cause to the
-                            morphing plankton due to changes in salinity and eutrophication. In short, Algae
-                            concentration is an indicator of the Baltic Sea&apos;s health here reflected in the
-                            legibility of the font.
-                        </p> -->
                         <p class=" subTextOpacity ">The concentration of Baltic Sea Algae as of
                             22.09.2022
                             is 2.5µg/l. For several decades the Archipelago Research
@@ -308,6 +307,7 @@
                             an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
                             font.
                         </p>
+
 
                         <div class="algaeListContainer">
 
@@ -346,6 +346,7 @@
 
 
                     </div>
+
                 </section>
 
 
