--- a/public/soon.html
+++ b/public/soon.html
@@ -16,7 +16,7 @@
     </link>
 
 
-    <link rel="stylesheet" href="css/soon.css" />
+    <link rel="stylesheet" href="styles/soon.css" />
     <!-- JavaScript Bundle with Popper -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
