--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                 <div class="column">
                         <div class=" livetextmobile ">
                                     <!-- class="valueStatemobilehome" -->
-                                    <span class="goodVision">Fields of May</span>
+                                    <span class="fairVision">Fields of May</span>
                         </div>
                 </div>
 
@@ -86,9 +86,9 @@
    <!-- accordion item 2 -- start -->
    <input class="ac-input" id="ac-2" name="accordion-1" type="checkbox" />
    <label class="ac-label" for="ac-2">The concentration of Baltic Sea Algae as of
-    22.09.2022 ...<i></i></label>
+    12.10.2022 ...<i></i></label>
    <div class="article ac-content">
-     <p> ... is 2.5µg/l. For several decades the Archipelago Research
+     <p> ... is 2.8µg/l. For several decades the Archipelago Research
         Institute has been measuring the shrinking Herring and traced the cause to the morphing
         plankton due to changes in salinity and eutrophication. In short, Algae concentration is
         an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
@@ -242,7 +242,7 @@
                             <div class="nppost">
                                 <div class="livetext">
                                     <!-- class="valueState" -->
-                                    <span class="goodVision">Fields of May</span>
+                                    <span class="fairVision">Fields of May</span>
                                 </div>
                             </div>
                         </div>
@@ -254,8 +254,7 @@
 
 
                         <p class=" subTextOpacity ">The concentration of Baltic Sea Algae as of
-                            22.09.2022
-                            is 2.5µg/l. For several decades the Archipelago Research
+                            12.10.2022 is 2.8µg/l. For several decades the Archipelago Research
                             Institute has been measuring the shrinking Herring and traced the cause to the morphing
                             plankton due to changes in salinity and eutrophication. In short, Algae concentration is
                             an indicator of the Baltic Sea&apos;s health here reflected in the legibility of the
