--- a/public/about.html
+++ b/public/about.html
@@ -451,7 +451,9 @@
                 <!-- {/*---------------------------- horizontal gradient ----------- */} -->
                 <section class=" gradientTop"></section>
 
-
+                <div id="tooltip" class="cursorimg">
+                    <Image src="/assets/images/Fish.png" alt="Herring Fish" width="100px" height="25px" />
+                </div>
                 <!-- <Image id="image" class="cursorimg} src={cursor}  alt=" Herring Fish" width="400px" height="350px" /> -->
 
                 <section class="contentabout">
