--- a/public/about.html
+++ b/public/about.html
@@ -487,6 +487,7 @@
                             </li>
                             <li class="item float-item"><a href="#blue-economy-tribunal"> Blue economy tribunal </a>
                             </li>
+                            <li class="item float-item"><a href="#future-tradition"> Future tradition </a></li>
                             <li class="item float-item"><a href="#legal-ecologies"> Legal ecologies </a></li>
                             <li class="item float-item"><a href="#commoning"> Commoning </a></li>
                             <li class="item float-item"><a href="#commoning-Knowledge"> Commoning knowledge </a></li>
