--- a/public/about.html
+++ b/public/about.html
@@ -76,11 +76,11 @@
 
                             <!-- Top Navigation Menu -->
                             <div class="topnav">
-                                <!-- <a href="./" class="active">Fields of May</a> -->
+                                <a href="./" class="active">Fields of May</a>
                                 <a href="./" class="active"></a>
                                 <div id="myLinks">
                                     <a href="./about.html">About </a>
-                                    <a href="./witness-seminar-in-seili.html">Witness Seminar in Seili</a>
+                                    <a href="./witness-seminar-in-seili.html#accordion1">Witness Seminar in Seili</a>
                                     <a href="./comingsoon.html">A Witness Seminar How-To</a>
                                 </div>
                                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -222,7 +222,7 @@
                                 <label for="ac-5">Future tradition</label>
                                 <article class="ac-larger">
                                     <p>
-                                        <span style="display: block; text-indent: 10%; padding:9px; font-style: italic; "> 
+                                        <span style="display: block; padding:9px; font-style: italic; "> 
                                             “The question then becomes: what languages and visions will be appropriate to
                                             today&apos;s problem- space of capitalist hegemony and counter-hegemonic
                                             struggles? What might be the role, if any, of what used to be called
@@ -448,14 +448,17 @@
             <main class="main">
 
 
-                <!-- {/*---------------------------- horizontal gradient ----------- */} -->
-                <section class=" gradientTop"></section>
-
                 <div id="tooltip" class="cursorimg">
                     <Image src="/assets/images/Fish.png" alt="Herring Fish" width="100px" height="25px" />
                 </div>
                 <!-- <Image id="image" class="cursorimg} src={cursor}  alt=" Herring Fish" width="400px" height="350px" /> -->
 
+
+                   <!-- {/*---------------------------- horizontal gradient ----------- */} -->
+                   <section class=" gradientTop"></section>
+
+
+            <section class="centeredElements">
                 <section class="contentabout">
                     <div class="contentSection">
                         <div class="contentHeader">
@@ -559,13 +562,7 @@
 
                     </div>
                 </section>
-
-
-
-
-
-
-
+          
 
 
                 <section>
@@ -671,14 +668,14 @@
                             <div id="future-tradition">
                                 <div class="paragraph">
                                     <span class="subheader">Future tradition</span>
-                                    <i><b>“The question then becomes: what languages and visions will be appropriate to
+                                    <span style="display: block; padding:9px; font-style: italic; ">“The question then becomes: what languages and visions will be appropriate to
                                             today&apos;s problem- space of capitalist hegemony and counter-hegemonic
                                             struggles? What might be the role, if any, of what used to be called
                                             &apos;traditions&apos; in this regard? Can new forms of utopianism be
                                             invented? What should be the contribution of Western modernity to this
                                             endeavour? Conversely, at what point should we attempt to move beyond it?”
                                             Arturo Escobar
-                                        </b></i>
+                                    </span>
                                     Key to this project is putting notions of tradition and salvaging into discussion.
                                     Following Mignolo & Walsh, we denounce how modernity was posited in
                                     contradistinction with tradition, enabling modernity to mobilise a fiction that
@@ -808,17 +805,11 @@
 
                     </div>
                 </section>
-
+            </section>
 
             </main>
         </div>
-        </section>
-
-
-
-
-
-        </main>
+        
 
 
 
