--- a/public/a-witness-seminar-how-to.html
+++ b/public/a-witness-seminar-how-to.html
@@ -58,7 +58,7 @@
                                 <!-- <a href="#home" class="active">Logo</a> -->
                                 <div id="myLinks">
                                     <a href="./about.html">About </a>
-                                    <a href="./witness-seminar-in-seili.html">Witness Seminar in Seili</a>
+                                    <a href="./witness-seminar-in-seili.html#accordion1">Witness Seminar in Seili</a>
                                     <a href="./comingsoon.html">A Witness Seminar How-To</a>
                                 </div>
                                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
