--- a/public/about.html
+++ b/public/about.html
@@ -301,7 +301,7 @@
                                         collaboration and embodied practice, much like the midsummer poles used to
                                         function
                                         in the archipelago. Though witness seminars have often situated themselves in
-                                        contradistinction to oral history. <a class="link"
+                                        contradistinction to oral history. <a class="fraudlink"
                                             href="https://www.instagram.com/la_fraud/">FRAUD</a> proposes a
                                         re-interpretation that welcomes constituencies outside academia as specialists
                                         in
@@ -565,7 +565,7 @@
           
 
 
-                <section>
+                <section class="popupcontainer">
                     <div class="popup">
 
 
@@ -720,7 +720,7 @@
                                     archival source for future use that emphasises the capacities of interdisciplinary
                                     collaboration and embodied practice, much like the midsummer poles used to function
                                     in the archipelago. Though witness seminars have often situated themselves in
-                                    contradistinction to oral history. <a class="link" href="
+                                    contradistinction to oral history. <a class="fraudlink" href="
                                         https://www.instagram.com/la_fraud/">FRAUD</a> proposes a re-interpretation
                                     that
                                     welcomes constituencies outside academia as specialists in their own right, and
