--- a/public/about.html
+++ b/public/about.html
@@ -593,6 +593,7 @@
 
 
                             <div id="onrhythm">
+                                <div></div>
                                 <div class="paragraph">
                                     <span class="subheader">On Rhythm</span>
                                     Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution to
@@ -707,6 +708,7 @@
                             </div>
 
 
+                             <!-- <div></div> -->
                             <div id="legal-ecologies">
                                 <div class="paragraph">
                                     <span class="subheader">Legal Ecologies</span>
