mobile fix bottom?

--- a/public/about.html
+++ b/public/about.html
@@ -259,7 +259,7 @@
                                 <input type="checkbox" id="faq-6">
                                 <h1><label for="faq-6">Legal ecologies</label></h1>
                                 <div class="p">
-                                    <p> <b>
+                                    <p> 
                                         Could we re-imagine law to advocate and nurture multispecies legal ecologies? 
                                         According to Elina Raitinen, an ecosystems approach to law is crucial because the legal mindset thus far, which is based on the freedom of man, has been devastating. 
                                         She explains that ownership and state sovereignty are the two organising principles of legal modernity. 
@@ -267,7 +267,7 @@
                                         Raitinen advocates for law needs to reorient itself from facilitating extractive free action by individuals to a responsible world-making. 
                                         And in this re-orientation, inter-dependency is central. In other words, an alternative ontology of understanding social and ecological systems as interrelated expressions of one unified, vulnerable living order. 
                                         In order for us to survive in the Anthropocene, we would need to unravel the priority of rights, 
-                                         therefore, radical care and renewal must be brought to the heart of the conceptual system of justice, rather than free will. </b></p>
+                                         therefore, radical care and renewal must be brought to the heart of the conceptual system of justice, rather than free will. </p>
                                 </div>
                               </div>
                               <div class="c">
