--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                         <!-- accordion item 2 -- start -->
                                 <input class="ac-input" id="ac-2" name="accordion-1" type="checkbox" />
                                         <label class="ac-label" for="ac-2">
-                                                2.8µg/l is the concentration of the Baltic Sea Algae as of 12.10.2022 ...
+                                                test2.8µg/l is the concentration of the Baltic Sea Algae as of 12.10.2022 ...
                                                 <i></i>
                                         </label>
                                             <div class="article ac-content">
