--- a/public/witness-seminar-in-seili.html
+++ b/public/witness-seminar-in-seili.html
@@ -139,8 +139,8 @@
                                                                                 These gargantuan ships trace the global entanglements of extraction. The ships carrying containers of phosphate rich industrial fertiliser glide along the Baltic. Once it is delivered, the phosphate run-off from agricultural land in turn contributes to the sea's eutrophication. 
                                                                                 It too cannot breathe. The seabed is choking. Shrinking plankton and fish are adapting to this stifling environment.
                                                                                  For several decades the Archipelago Research Institute in Seili has been measuring the shrinking Herring and tracing its relationship to the morphing plankton, namely due to changes in salinity and eutrophication. 
-                                                                                  <!-- <a href="#footer"><span class="link">1</span> </a>  -->
-                                                                                  <a><span class="link">1</span> </a> 
+                                                                                  <a href="#footer"><span class="link">1</span> </a> 
+                                                                                  <!-- <a><span class="link">1</span> </a>  -->
                                                                                  </p>
 
                                                                                  
