desktop and mobile

--- a/public/index.html
+++ b/public/index.html
@@ -302,20 +302,19 @@
 
 
                 <!-- {/* Decorative-------------------------------------------------------- */} -->
-                <section class="cordiantesContainer">
+                <!-- <section class="cordiantesContainer">
                     <div class="cordBottomLeft" id="cordBottomLeft">
                         <p class="cord">+ (10°e)</p>
                     </div>
 
                     <div class="cord__bottomMiddle" id="cordBottomMiddle">
-                        <!-- {/* <p class=""plus>+</p> */} -->
                         <p class="cord">+ (20°e)</p>
                     </div>
 
                     <div class="cord__bottomEnd" id="cordBottomEnd">
                         <p class="cord">+ (30°e)</p>
                     </div>
-                </section>
+                </section> -->
 
 
             </main>
